overflow issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -228,7 +228,6 @@
 *{
   border:0px solid black;
   font-family: 'Roboto','Raleway',"Helvetica Neue", Helvetica, Arial, sans-serif;
-  overflow-y:;
 }
 
 body{
